@@ -2,9 +2,10 @@ package com.societegenerale.githubcrawler;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
-import com.fasterxml.jackson.module.kotlin.KotlinModule;
+import tools.jackson.databind.ObjectMapper;
+import tools.jackson.databind.json.JsonMapper;
+import tools.jackson.dataformat.yaml.YAMLMapper;
+import tools.jackson.module.kotlin.KotlinModule;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.Charset;
@@ -14,7 +15,9 @@ import org.springframework.util.StreamUtils;
 
 class ConfigParserTest {
 
-    ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
+    ObjectMapper mapper = YAMLMapper.builder()
+        .addModule(new KotlinModule.Builder().build())
+        .build();
 
     @Test
     void canParseSimpleYamlConfig() throws IOException {
@@ -32,15 +35,13 @@ class ConfigParserTest {
         InputStream is = getClass().getClassLoader().getResourceAsStream("sampleRepoConfig.yaml");
         String configToParse = StreamUtils.copyToString(is, Charset.forName("UTF-8"));
 
-        mapper.registerModule(new KotlinModule());
-
         RepositoryConfig parsedRepositoryConfig = mapper.readValue(configToParse, RepositoryConfig.class);
 
         assertThat(parsedRepositoryConfig).isNotNull();
         assertThat(parsedRepositoryConfig.getExcluded()).isFalse();
         assertThat(parsedRepositoryConfig.getFilesToParse()).hasSize(1);
 
-        FileToParse firstFile = parsedRepositoryConfig.getFilesToParse().get(0);
+        FileToParse firstFile = parsedRepositoryConfig.getFilesToParse().getFirst();
         assertThat(firstFile.getRedirectTo()).isEqualTo("moduleWhereDockerFileIs/Dockerfile");
         assertThat(firstFile.getName()).isEqualTo("Dockerfile");
     }
@@ -50,7 +51,7 @@ class ConfigParserTest {
 
         String configToParse = "{\"excluded\": true}";
 
-        ObjectMapper mapper = new ObjectMapper();
+        ObjectMapper mapper = new JsonMapper();
 
         RepositoryConfig parsedRepositoryConfig = mapper.readValue(configToParse, RepositoryConfig.class);
 
